--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,11 +6,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>sinamolol.ico" />
     <!-- flaticon -->
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    />
     <!-- bootstrap -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <title>HW & SW</title>
     <!-- <%= htmlWebpackPlugin.options.title %> -->
+
+    <!-- jQuery -->
+    <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+
+    <!-- Tmap API -->
+    <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=Z8fQOevi784MjILYRu7j41rYbd7U2Q7t97LejImN"></script>
   </head>
   <body>
     <noscript>
